--- a/html/about.html
+++ b/html/about.html
@@ -1,12 +1,28 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>About</title>
 </head>
 <body>
     <main>
+        <nav>
+            <div>
+                <img src="../Pictures/images (11).jpg" alt="">
+            </div>
+            <div class="navigation">
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./products.html">Products</a></li>
+                    <li><a href="./checkout.html">Checkout</a></li>
+                    <li><a href="./admin.html">Admin</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <section class="about">
             <div id="content">
                 <h2>About</h2>
@@ -20,4 +36,4 @@
         </section>
     </main>
 </body>
-</html> -->
+</html>
