--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav>
-        <img src="Pictures/images (11).jpg" alt="">
+        <div>
+            <img src="./Pictures/images (11).jpg" alt="">
+        </div>
         <div class="navigation">
             <ul>
                 <li><a href="/index.html">Home</a></li>
@@ -23,7 +25,9 @@
     <main id="home">
         <img src="https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg" alt="">
     </main>
-    <footer></footer>
-    <script src="./script/index.html"></script>
+    <footer>
+        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
+    </footer>
+    <script src="footer.html"></script>
 </body>
 </html>
