--- a/html/about.html
+++ b/html/about.html
@@ -35,5 +35,9 @@
             
         </section>
     </main>
+    <footer>
+        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
+    </footer>
+    <script src="footer.html"></script>
 </body>
 </html>
