--- a/html/checkout.html
+++ b/html/checkout.html
@@ -22,5 +22,9 @@
             </ul>
         </div>
     </nav>
+    <footer>
+        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
+    </footer>
+    <script src="footer.html"></script>
 </body>
 </html>
