--- a/html/about.html
+++ b/html/about.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>About</title>
 </head>
@@ -14,7 +17,7 @@
             </div>
             <div class="navigation">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./products.html">Products</a></li>
                     <li><a href="./checkout.html">Checkout</a></li>
@@ -38,6 +41,6 @@
     <footer>
         <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
     </footer>
-    <script src="footer.html"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
