--- a/html/checkout.html
+++ b/html/checkout.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Checkout</title>
 </head>
@@ -13,12 +16,12 @@
         </div>
         <div class="navigation">
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="./html/about.html">About</a></li>
-                <li><a href="./html/products.html">Products</a></li>
-                <li><a href="./html/checkout.html">Checkout</a></li>
-                <li><a href="./html/admin.html">Admin</a></li>
-                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./products.html">Products</a></li>
+                <li><a href="./checkout.html">Checkout</a></li>
+                <li><a href="./admin.html">Admin</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
