--- a/html/products.html
+++ b/html/products.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Products</title>
 </head>
 <body>
+   <header>
     <nav>
         <div>
             <img src="../Pictures/images (11).jpg" alt="">
@@ -22,6 +26,23 @@
             </ul>
         </div>
     </nav>
+   </header>
+   <main>
+    <section>
+        <!--Search Bar-->
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="search product">
+            <button onclick="searchProducts()">Search</button>
+        </div>
+
+        <!--Sorting Buttons-->
+        <div class="sorting-container">
+            <label for="sort">Sort by:</label>
+            <select id=""></select>
+
+        </div>
+    </section>
+   </main>
     <footer>
         <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
     </footer>
