--- a/html/admin.html
+++ b/html/admin.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div>
-            <img src="../Pictures/images (11).jpg" alt="">
+            <img src="https://i.postimg.cc/25r8Ssbs/images-11.jpg" alt="">
         </div>
         <div class="navigation">
             <ul>
