--- a/html/products.html
+++ b/html/products.html
@@ -13,7 +13,7 @@
    <header>
     <nav>
         <div>
-            <img src="https://i.postimg.cc/25r8Ssbs/images-11.jpg" alt="">
+            <img src="../Pictures/images (11).jpg" alt="">
         </div>
         <div class="navigation">
             <ul>
@@ -27,103 +27,25 @@
         </div>
     </nav>
    </header>
-<main>
-       <!-- Search Bar -->
-<div class="search-container">
-    <input type="text" id="searchInput" placeholder="Search products...">
-    <button onclick="searchProducts()">Search</button>
-</div>
+   <main>
+    <section>
+        <!--Search Bar-->
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="search product">
+            <button onclick="searchProducts()">Search</button>
+        </div>
 
-<!-- Sorting Buttons -->
-<div class="sorting-container">
-    <label for="sort">Sort by:</label>
-    <select id="sort" onchange="sortProducts()">
-        <option value="price_asc">Price: Low to High</option>
-        <option value="price_desc">Price: High to Low</option>
-    </select>
-</div>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/cCmGj2CW/images-5.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Coffee, Sugar and Almond Oil Face Scrub</h5>
-          <p class="card-text">R70</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/G2t7PpTv/images-1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Coffee, Sugar and Castor Oil Face Scrub</h5>
-          <p class="card-text">R70</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/bw6FZbsq/soap-1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Turmeric Soap</h5>
-          <p class="card-text">R60</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/9Qqq9Hfz/soap-4.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Olive Soap</h5>
-          <p class="card-text">R50</p>
-        </div>
-        <div class="card-footer">
-          <small>
-            <button>Add to Cart</button>
-          </small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/s2G1Mk3K/images-7.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Aloe Vera</h5>
-          <p class="card-text">R90</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://i.postimg.cc/JzfM2GWc/images-8.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Aloe Vera Toner</h5>
-          <p class="card-text">R90</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-body-secondary">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-  </div>
+        <!--Sorting Buttons-->
+        <div class="sorting-container">
+            <label for="sort">Sort by:</label>
+            <select id=""></select>
 
-
-</main>
+        </div>
+    </section>
+   </main>
     <footer>
         <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
     </footer>
-    <script src="/script/product.js"></script>
+    <script src="footer.html"></script>
 </body>
 </html>
