--- a/html/checkout.html
+++ b/html/checkout.html
@@ -25,6 +25,9 @@
             </ul>
         </div>
     </nav>
+    <main>
+        
+    </main>
     <footer>
         <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
     </footer>
