--- a/html/about.html
+++ b/html/about.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!--css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>About</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <nav>
-            <div>
-                <img src="../Pictures/images (11).jpg" alt="">
-            </div>
-            <div class="navigation">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li><a href="./products.html">Products</a></li>
-                    <li><a href="./checkout.html">Checkout</a></li>
-                    <li><a href="./admin.html">Admin</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-        <section class="about">
-            <div id="content">
-                <h2>About</h2>
-                <h4>I am Vuyiseka Njovane the Founder and Executive Director of Organic Cosmetic Wholesale. I have struggled with acne for all my teen years right into my early 20s, having have tried different brands that people recommended and switching between them was such a horrific experience, you can imagine. Until one day I decided to carry out some research and found some really helpful information on how I can make organic products for my acne-prone skin
-                    then I started using organic products on my face that i had prepared myself and never looked back. 
-                    My skin has been recovering since and i couldn’t be happier. 
-                    This is when and how Organic Cosmetic Wholesale came to life, i have a desire to help many people suffering with the same skin conditions throughout the universe with my organic products </h4>
-            </div>
-            
-        </section>
+      <nav>
+        <div>
+          <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
+        </div>
+        <div class="navigation">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./products.html">Products</a></li>
+            <li><a href="./checkout.html">Checkout</a></li>
+            <li><a href="./admin.html">Admin</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="header">
+        <h2>About</h2>
+      </div>
+
+      <h4 class="para1">
+        I am Vuyiseka Njovane the Founder and Executive Director of Organic
+        Cosmetic Wholesale. I have struggled with acne for all my teen years
+        right into my early 20s, having have tried different brands that people
+        recommended and switching between them was such a horrific experience,
+        you can imagine. Until one day I decided to carry out some research and
+        found some really helpful information on how I can make organic products
+        for my acne-prone skin then I started using organic products on my face
+        that i had prepared myself and never looked back. My skin has been
+        recovering since and i couldn’t be happier. This is when and how Organic
+        Cosmetic Wholesale came to life, i have a desire to help many people
+        suffering with the same skin conditions throughout the universe with my
+        organic products
+      </h4>
     </main>
-    <footer>
-        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
+    <footer class="mt-3 container-fluid position-relative">
+        <p class="lead text-center">&copy 
+            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+            <span>All rights reserved.</span>
+        </p>
+        <div class="text-center">
+            <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
