--- a/html/checkout.html
+++ b/html/checkout.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div>
-            <img src="../Pictures/images (11).jpg" alt="">
+            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
         </div>
         <div class="navigation">
             <ul>
@@ -26,11 +26,22 @@
         </div>
     </nav>
     <main>
-        
+        <div class="header">
+            <h2>Checkout</h2>
+        </div>
+        <div id="checkoutContainer">
+        </div>
     </main>
-    <footer>
-        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
-    </footer>
-    <script src="footer.html"></script>
+    <footer class="mt-3 container-fluid position-relative">
+        <p class="lead text-center">&copy 
+            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+            <span>All rights reserved.</span>
+        </p>
+        <div class="text-center">
+            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+        </div>
+    <script src="/script/checkout.js"></script>
 </body>
 </html>
