--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div>
-            <img src="../Pictures/images (11).jpg" alt="">
+            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
         </div>
         <div class="navigation">
             <ul>
@@ -25,8 +25,16 @@
             </ul>
         </div>
     </nav>
-    <footer>
-        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
+    <footer class="mt-3 container-fluid position-relative">
+        <p class="lead text-center">&copy 
+            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+            <span>All rights reserved.</span>
+        </p>
+        <div class="text-center">
+            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+            <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
