--- a/html/products.html
+++ b/html/products.html
@@ -13,7 +13,7 @@
    <header>
     <nav>
         <div>
-            <img src="../Pictures/images (11).jpg" alt="">
+            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
         </div>
         <div class="navigation">
             <ul>
@@ -30,7 +30,9 @@
    <main>
     <div class="header">
         <h2>Products</h2>
+    </div>
         <!-- Search bar-->
+    <div class="search-sort">
         <input type="text" id="searchInput" placeholder="Search products...">
         <button onclick="searchProducts()">Search</button>
         <!-- Sort bar-->
@@ -39,6 +41,7 @@
             <option value="price_desc">Price: High to Low</option>
         </select>
     </div>
+   
     <div class="row-cols-1" id="productContainer">
         <!-- Product cards will be displayed here -->
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -69,9 +72,17 @@
           </div>
     </div>
    </main>
-    <footer>
-        <p>&copy; 2023 Organics Cosmetics Wholesaler. All rights reserved.</p>
-    </footer>
+   <footer class="mt-3 container-fluid position-relative">
+    <p class="lead text-center">&copy 
+        <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+        <span>All rights reserved.</span>
+    </p>
+    <div class="text-center">
+        <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+    </div>
+</footer>
     <script src="../script/product.js"></script>
 </body>
 </html>
