--- a/html/checkout.html
+++ b/html/checkout.html
@@ -30,6 +30,24 @@
             <h2>Checkout</h2>
         </div>
         <div id="checkoutContainer">
+            <table>
+                <caption>
+                  This is an example table, and this is its caption to describe the contents.
+                </caption>
+                <thead>
+                  <tr>
+                    <th>Item name:</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Quantity:</td>
+                  </tr>
+                  <tr>
+                    <td>Price:</td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
