--- a/html/contact.html
+++ b/html/contact.html
@@ -1,41 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!--css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Contact</title>
-</head>
-<body>
-    <nav>
+  </head>
+  <body>
+    <main>
+      <nav>
         <div>
-            <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
+          <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
         </div>
         <div class="navigation">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./products.html">Products</a></li>
-                <li><a href="./checkout.html">Checkout</a></li>
-                <li><a href="./admin.html">Admin</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./products.html">Products</a></li>
+            <li><a href="./checkout.html">Checkout</a></li>
+            <li><a href="./admin.html">Admin</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
+      <div class="header">
+        <h2>Contact Us</h2>
+      </div>
+      <div id="form1">
+        <form action="https://formspree.io/f/xnqkldqw" method="post">
+            <div class="mb-3 w-25 ">
+              <label for="#FirstName" class="form-label">Fullname</label>
+              <input type="text" class="form-control" name="Fullname" id="FirstName" aria-describedby="#Fullname" placeholder="Fullname" required>
+             
+            </div>
+            <div class="mb-3 w-25">
+              <label for="#Surname" class="form-label">Surname</label>
+              <input type="text" class="form-control" name="Surname" required id="Surname" aria-describedby="#Surname" placeholder="Surname">
+             
+            </div>
+            <div class="mb-3">
+              <label for="#Email" class="form-label">Email address</label>
+              <input type="Email" class="form-control" name="Email" required id="Email" aria-describedby="#Email" placeholder="Email
+              ">
+            </div>
+            <div class="mb-3">
+              <label for="#Message" class="form-label">Message</label>
+              <textarea class="form-control" id="Message" rows="3" placeholder="Message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-dark" target="_blank">Submit</button>
+          </form>
+      </div>
+    </main>
     <footer class="mt-3 container-fluid position-relative">
-        <p class="lead text-center">&copy 
-            <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
-            <span>All rights reserved.</span>
-        </p>
-        <div class="text-center">
-            <a href="#"class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
-            <a href="#"class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
-            <a href="#"class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
-        </div>
+      <p class="lead text-center">
+        &copy
+        <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
+        <span>All rights reserved.</span>
+      </p>
+      <div class="text-center">
+        <a href="#" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
+      </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
