--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <nav>
         <div>
+        <a class="logoImage" href="/index.html">
             <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
+        </a>
         </div>
         <div class="navigation">
             <ul>
@@ -26,7 +28,9 @@
         </div>
     </nav>
     <main id="home">
+     <div>
         <img src="https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg" alt="">
+    </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
