--- a/html/about.html
+++ b/html/about.html
@@ -49,6 +49,50 @@
         suffering with the same skin conditions throughout the universe with my
         organic products
       </h4>
+      
+    <div class="container">
+        <!-- Your other content goes here -->
+
+        <!-- Customer Reviews Section -->
+        <section class="customer-reviews mt-4">
+            <h2 class="text-center">Customer Reviews</h2>
+
+            <!-- Review 1 -->
+            <div class="review">
+                <img src="" alt="Customer 1" class="customer-image">
+                <p class="customer-comment">
+                    "I absolutely love the products from Organic Cosmetic Wholesale! The quality is amazing, and my skin has never looked better. Highly recommended!"
+                </p>
+                <!-- Star Rating (Bootstrap Icons) -->
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                </div>
+            </div>
+
+            <!-- Review 2 -->
+            <div class="review">
+                <img src="" alt="Customer 2" class="customer-image">
+                <p class="customer-comment">
+                    "Organic Cosmetic Wholesale has transformed my skincare routine. The natural ingredients are gentle on my skin, and I can see a noticeable improvement. Thank you!"
+                </p>
+                <!-- Star Rating (Bootstrap Icons) -->
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                </div>
+            </div>
+
+            <!-- Add more reviews as needed -->
+
+        </section>
+    </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
