--- a/html/admin.html
+++ b/html/admin.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <nav>
-        <div>
+        <a class="logoImage" href="/index.html">
             <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
-        </div>
+        </a>
         <div class="navigation">
             <ul>
                 <li><a href="../index.html">Home</a></li>
