--- a/html/contact.html
+++ b/html/contact.html
@@ -18,7 +18,9 @@
     <main>
       <nav>
         <div>
-          <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="" />
+            <a class="logoImage" href="/index.html">
+                <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
+            </a>
         </div>
         <div class="navigation">
           <ul>
@@ -37,18 +39,18 @@
       <div id="form1">
         <form action="https://formspree.io/f/xnqkldqw" method="post">
             <div class="mb-3 w-25 ">
-              <label for="#FirstName" class="form-label">Fullname</label>
-              <input type="text" class="form-control" name="Fullname" id="FirstName" aria-describedby="#Fullname" placeholder="Fullname" required>
+              <label for="#FirstName" class="form-label">Name</label>
+              <input type="text" class="form-control" name="Fullname" id="FirstName" aria-describedby="#Fullname" placeholder="enter name here" required>
              
             </div>
             <div class="mb-3 w-25">
               <label for="#Surname" class="form-label">Surname</label>
-              <input type="text" class="form-control" name="Surname" required id="Surname" aria-describedby="#Surname" placeholder="Surname">
+              <input type="text" class="form-control" name="Surname" required id="Surname" aria-describedby="#Surname" placeholder="enter surname here">
              
             </div>
             <div class="mb-3">
               <label for="#Email" class="form-label">Email address</label>
-              <input type="Email" class="form-control" name="Email" required id="Email" aria-describedby="#Email" placeholder="Email
+              <input type="Email" class="form-control" name="Email" required id="Email" aria-describedby="#Email" placeholder="name@example.com
               ">
             </div>
             <div class="mb-3">
@@ -57,6 +59,17 @@
             </div>
             <button type="submit" class="btn btn-dark" target="_blank">Submit</button>
           </form>
+      </div>
+      <div>
+        <h4>Contact us at info.organiccosmeticwholesalers.com</h4>
+        <p>36  Market Street
+            <br>
+            Camps Bay 
+            <br>
+            Cape Town
+            <br>
+            7784
+        </p>
       </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
