--- a/html/products.html
+++ b/html/products.html
@@ -12,9 +12,9 @@
 <body>
    <header>
     <nav>
-        <div>
+        <a class="logoImage" href="/index.html">
             <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
-        </div>
+        </a>
         <div class="navigation">
             <ul>
                 <li><a href="../index.html">Home</a></li>
