--- a/html/checkout.html
+++ b/html/checkout.html
@@ -49,6 +49,11 @@
             </tr>
         </table>
     </div>
+    <div>
+        <button onclick="clearCart()">Clear Cart</button>
+        <button onclick="buyNow()">Buy Now</button>
+        <p id="thankYouMessage" style="display: none;">Thank you for shopping with us!</p>
+    </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
