--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span>All rights reserved.</span>
         </p>
         <div class="text-center">
-            <a href="#" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
+            <a href="" class="text-dark mx-2"><i class="bi bi-facebook"></i></a>
             <a href="#" class="text-dark mx-2"><i class="bi bi-instagram"></i></a>
             <a href="#" class="text-dark mx-2"><i class="bi bi-whatsapp"></i></a>
         </div>
