--- a/html/checkout.html
+++ b/html/checkout.html
@@ -28,6 +28,9 @@
         </div>
     </nav>
     <main>
+      <div class="header">
+        <h2>Checkout</h2>
+      </div>
         <div class="row-cols-1">
         <table>
             <tr>
@@ -48,6 +51,9 @@
                 </tbody>
             </tr>
         </table>
+    </div>
+    <div>
+        
     </div>
     <div>
         <button onclick="clearCart()">Clear Cart</button>
