--- a/html/contact.html
+++ b/html/contact.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
       <div class="header">
-        <h2>Contact Us</h2>
+        <h2>Reach Me</h2>
       </div>
       <div id="form1">
         <form action="https://formspree.io/f/xnqkldqw" method="post">
@@ -61,7 +61,7 @@
           </form>
       </div>
       <div>
-        <h4>Contact us at info.organiccosmeticwholesalers.com</h4>
+        <h6>Contact us at info.organiccosmeticwholesalers.com</h6>
         <p>36  Market Street
             <br>
             Camps Bay 
