--- a/html/admin.html
+++ b/html/admin.html
@@ -10,7 +10,7 @@
     <title>Checkout</title>
 </head>
 <body>
-    <nav>
+<nav>
         <a class="logoImage" href="/index.html">
             <img src="https://i.postimg.cc/hvQ15s0b/images-11.jpg" alt="">
         </a>
@@ -25,6 +25,34 @@
             </ul>
         </div>
     </nav>
+<main>
+ <div class="header">
+        <h2>Admnistration</h2>
+</div>
+    <table id="productTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Image</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Product rows will be added dynamically here -->
+        </tbody>
+    </table>
+    
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Product Details</h2>
+            <p id="productName"></p>
+            <p id="productPrice"></p>
+            <img id="productImage" alt="Product Image" style="max-width: 200px; max-height: 200px;">
+        </div>
+    </div>
+</main>
     <footer class="mt-3 container-fluid position-relative">
         <p class="lead text-center">&copy 
             <span id="all-rights">Organics Cosmetics Wholesaler 2023.</span>
@@ -37,5 +65,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/script/admin.js"></script>
 </body>
 </html>
