--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <main id="home">
      <div>
         <img src="https://i.postimg.cc/Bbj7zYGq/woman-holding-up-a-face-cream-1296x728-header-1.jpg" alt="">
+        <h1 class="text-1">Greetings! Welcome to <b class="storeName">Organic Cosmetic Wholesaler.</b> I'm Vuyiseka, and I'm delighted to have you here. Explore our diverse range of organic products designed to cater to your skincare needs.</h1>
     </div>
     </main>
     <footer class="mt-3 container-fluid position-relative">
